# solana_token_stream

sol-stream-backend/: .env  Cargo.toml
sol-stream-backend/migrations/2022-01-18-181000_Stream/: up.sql
sol-stream-backend/src/: main.rs  models.rs  solana.rs
sol-stream-frontend/src/actions/: index.js
sol-stream-program/: Cargo.toml  keypair.json  pubKey.txt
sol-stream-program/src/: error.rs  state.rs
