cargo-features = ["edition2021"]

[package]
name = "sol-stream-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.4"
borsh = "0.9.1"
thiserror = "1.0.30"
spl-token = "3.3.0"

[dev-dependencies]
solana-program-test = "1.9.4"
solana-sdk = "1.9.4"

[lib]
crate-type = ["cdylib", "lib"]
